# CVE

./: .gitignore  README.md  cartevisite.spec  cartevisite_app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-app.yml  ci.yml
cardscan/: __init__.py  __main__.py  camera.py  contact.py  database.py  export.py  gui.py  ocr.py  parser.py  scanner.py
cartedevisite/: __init__.py  __main__.py  cli.py  config.py  database.py  export.py  gui.py  models.py  ocr.py  parser.py
cartes_visite/: __init__.py  app.py  config.py  contact.py  database.py  exporter.py  ocr.py  parser.py
cartevisite/: __init__.py  __main__.py  batch.py  camera.py  config.py  database.py  export.py  gui.py  models.py  ocr.py  parser.py
tests/: test_batch.py  test_config.py  test_database.py  test_export.py  test_exporter.py  test_ocr.py  test_parser.py  test_scanner.py
